<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".filter.ui.fragment.FilteringIndustryFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/filteringSectorToolbar"
        style="@style/Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_left"
        app:title="@string/choosing_a_sector"
        app:titleTextAppearance="@style/TitleText" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginHorizontal="@dimen/padding_horizontal"
        android:layout_marginTop="@dimen/padding_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filteringSectorToolbar">
        <EditText
            android:id="@+id/filteringSectorEditText"
            style="@style/SearchEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:hint="@string/type_a_sector"
            tools:ignore="Autofill,RtlSymmetry"/>
        <ImageView
            android:id="@+id/filteringSectorFormButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginStart="@dimen/padding_horizontal"
            android:src="@drawable/ic_search"
            app:tint="@color/black_universal"
            android:contentDescription="@string/type_a_sector" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filteringSectorRecyclerView"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:layout_marginTop="@dimen/margin_vertical_small"
        android:paddingBottom="108dp"
        android:clipToPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container"
        tools:listitem="@layout/item_sector" />

    <ProgressBar
        android:id="@+id/industryScreenProgressBar"
        android:layout_width="@dimen/progress_bar"
        android:layout_height="@dimen/progress_bar"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/industriesScreenNotFoundPlaceholder"
        style="@style/PlaceholderStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/no_such_industry"
        app:drawableTopCompat="@drawable/placeholder_not_found"
        android:visibility="gone" />

    <TextView
        android:id="@+id/industriesScreenErrorPlaceholder"
        style="@style/PlaceholderStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/failed_to_get_a_list"
        app:drawableTopCompat="@drawable/placeholder_failed_to_get_a_list"
        android:visibility="gone" />

    <Button
        android:id="@+id/filteringIndustriesButton"
        style="@style/Button"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:text="@string/select"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>