<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".filter.ui.fragment.FilteringCountryFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/filteringCountryToolbar"
        style="@style/Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_left"
        app:title="@string/choosing_a_country"
        app:titleTextAppearance="@style/TitleText" />

    <ProgressBar
        android:id="@+id/searchScreenPaginationProgressBar"
        android:layout_width="@dimen/progress_bar"
        android:layout_height="@dimen/progress_bar"
        android:layout_gravity="center"
        android:layout_margin="@dimen/padding_horizontal"
        android:indeterminateTint="@color/blue"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filteringCountryToolbar" />

    <TextView
        android:id="@+id/countryScreenNotFoundPlaceholder"
        style="@style/PlaceholderStyle"
        android:text="@string/no_such_region"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/placeholder_not_found"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/countryScreenErrorPlaceholder"
        style="@style/PlaceholderStyle"
        android:text="@string/failed_to_get_a_list"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/placeholder_failed_to_get_a_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filteringCountryRecyclerView"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:layout_marginTop="@dimen/margin_vertical_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filteringCountryToolbar"
        tools:listitem="@layout/item_country_and_region" />

</androidx.constraintlayout.widget.ConstraintLayout>