<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/filteringSettingsToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_screen_header_height"
        android:minHeight="@dimen/search_screen_header_height"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_left_arrow"
        app:navigationIconTint="@color/black"
        app:title="@string/filtering_settings"
        app:titleMarginStart="0dp"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@color/black" />

    <FrameLayout
        android:id="@+id/workplaceClearedFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/padding_horizontal"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/workplace"
            android:textColor="@color/gray_white"
            android:textSize="@dimen/text_size_main" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginVertical="@dimen/padding_vertical_small"
            android:layout_marginEnd="@dimen/padding_horizontal_very_small"
            android:contentDescription="@string/workplace"
            android:src="@drawable/ic_right_arrow"
            app:tint="@color/black" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/workplaceFilledFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|bottom"
                android:layout_marginStart="@dimen/padding_horizontal"
                android:fontFamily="@font/ys_display_regular"
                android:text="@string/workplace"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_menu" />

            <TextView
                android:id="@+id/workplaceFilledTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|top"
                android:layout_marginStart="@dimen/padding_horizontal"
                android:clickable="true"
                android:fontFamily="@font/ys_display_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_main"
                tools:text="Россия, Москва" />
        </LinearLayout>

        <ImageView
            android:id="@+id/workplaceCrossImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginVertical="@dimen/padding_vertical_small"
            android:layout_marginEnd="@dimen/padding_horizontal_very_small"
            android:contentDescription="@string/workplace"
            android:src="@drawable/ic_cross" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/sectorClearedFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/padding_horizontal"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/sector"
            android:textColor="@color/gray_white"
            android:textSize="@dimen/text_size_main" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginVertical="@dimen/padding_vertical_small"
            android:layout_marginEnd="@dimen/padding_horizontal_very_small"
            android:contentDescription="@string/sector"
            android:src="@drawable/ic_right_arrow"
            app:tint="@color/black" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/sectorFilledFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|bottom"
                android:layout_marginStart="@dimen/padding_horizontal"
                android:fontFamily="@font/ys_display_regular"
                android:text="@string/sector"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_menu" />

            <TextView
                android:id="@+id/sectorFilledTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|top"
                android:layout_marginStart="@dimen/padding_horizontal"
                android:clickable="true"
                android:fontFamily="@font/ys_display_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_main"
                tools:text="IT" />
        </LinearLayout>

        <ImageView
            android:id="@+id/sectorCrossImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginVertical="@dimen/padding_vertical_small"
            android:layout_marginEnd="@dimen/padding_horizontal_very_small"
            android:contentDescription="@string/sector"
            android:src="@drawable/ic_cross" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_horizontal"
        android:layout_marginVertical="@dimen/margin_vertical"
        android:background="@drawable/rectangle_with_corners"
        android:backgroundTint="@color/light_gray_gray"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_horizontal"
            android:layout_marginTop="@dimen/padding_vertical"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/expected_salary"
            android:textColor="@color/gray_white"
            android:textSize="@dimen/text_size_menu" />

        <EditText
            android:id="@+id/enterTheAmountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_horizontal"
            android:layout_marginBottom="@dimen/padding_vertical"
            android:autofillHints="number"
            android:background="@null"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/enter_the_amount"
            android:inputType="number"
            android:textColorHint="@color/gray_white"
            android:textSize="@dimen/text_size_main" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/doNotShowWithoutSalaryCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_horizontal"
        android:layout_marginEnd="@dimen/padding_horizontal_very_small"
        android:button="@null"
        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
        android:drawableTint="@color/blue"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/do_not_show_without_salary"
        android:textSize="@dimen/text_size_main" />

    <LinearLayout
        android:visibility="gone"
        tools:visibility="visible"
        android:id="@+id/filteringSettingsButtonsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/applyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="@dimen/padding_horizontal"
            android:background="@drawable/rectangle_with_corners"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/apply"
            android:textAllCaps="false"
            android:textColor="@color/white_universal"
            android:textSize="@dimen/text_size_main"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="@dimen/padding_horizontal"
            android:layout_marginTop="@dimen/padding_vertical"
            android:layout_marginBottom="@dimen/margin_vertical"
            android:background="@android:color/transparent"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:textColor="@color/red_white"
            android:textSize="@dimen/text_size_main"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>


</LinearLayout>